--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ opt-level = 'z'
 
 [dependencies]
 reqwest = { version = "0.11.2", features = ["blocking"] }
-anyhow = "1.0.39"
 log = "0.4.14"
-simple_logger = "1.11.0"
+bytes = "1.0.1"
+env_logger = "0.8.3"
