--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ lto = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.2", features = ["blocking"] }
-log = "0.4.14"
+reqwest = { version = "^0.11.0", features = ["blocking"] }
+log = "^0.4.0"
 bytes = "1.0.1"
-env_logger = "0.8.3"
+env_logger = "0.8.4"
